--- a/build.xml
+++ b/build.xml
@@ -58,6 +58,7 @@
         </path>
 
         <target name="compile.info" description="compile the source">
+		<mkdir dir="bin"/>
                 <javac srcdir="${src}/info/devopsabyss" destdir="${bin}">
                         <classpath refid="compile.classpath" />
                 </javac>
